deploy/k8s/service/cart/cart-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-svc
  namespace: shopping
  labels:
    app.kubernetes.io/name: cart-svc
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cart
    app.kubernetes.io/version: v1.0
  ports:
    - name: http
      port: 80
      targetPort: 8082
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cart
  namespace: shopping
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/version: v1.0
spec:
  serviceName: cart-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
      app.kubernetes.io/version: v1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cart
        app.kubernetes.io/version: v1.0
    spec:
      containers:
        - name: cart
          image: localhost:5000/go-shopping-poc/cart:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: cart-ingress
    app.kubernetes.io/version: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure,web"
    traefik.ingress.kubernetes.io/enable-rules: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: pocstore.local
    http:
      paths:
        - path: /api/v1/carts
          pathType: Prefix
          backend:
            service:
              name: cart-svc
              port:
                number: 80
  tls:
    - hosts:
      - pocstore.local
      secretName: pocstorelocal-tls
